# rag-driven-gen-ai

./: Makefile  README.md  docker-compose.yml  llm.txt  pyproject.toml  run.sh
Users/nbaynham/learning/rag-driven-gen-ai/llm.txt/_deeplake_log/_meta/: 0000000001c00000000.jsonl
src/: config.py  main.py
src/rag_driven_gen_ai/: ingest.py  ingest_remote.py  test.py  weaviate_loader.py
